<resources>
    <string name="app_name">ModelProject</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kuzuki</string>
    <string name="nav_header_subtitle">thentph06484@fpt.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_empty">Username cannot be empty</string>
    <string name="error_emptyps">Password  cannot be empty</string>
    <string name="error_length"><![CDATA[Password length must be less 6]]></string>
    <string name="gt">The first and most important thing when you participate in traffic is compliance with traffic laws and traffic lights. Traffic laws are the laws that you must follow to ensure the safety and efficient for traffic between vehicles</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="cboremember">Remember</string>
    <string name="forget_password">Forget password ?</string>
    <string name="login_activity">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="wrong_user_pass">Username or password wrong</string>
    <string name="error_emptyphone">Phone cannot be empty</string>
    <string name="error_emptyname">Name  cannot be empty</string>
    <string name="error_emptyphonelength"><![CDATA[Phone number must >9 and <12]]></string>
    <string name="error_likepw">Confirm password must like as password</string>
    <string name="emptyadd">Add successfully</string>
    <string name="emptyadderror">Username already exists</string>
    <string name="alertsuccessfully">Save successfully</string>
    <string name="alerterror">Save error</string>
    <string name="emptyidtheloai">ID TheLoai  cannot be empty</string>
    <string name="emptynametheloai">Name TheLoai  cannot be empty</string>
    <string name="emptymotatheloai">Describe cannot be empty</string>
    <string name="emptypositiontheloai">Position Theloai  cannot be empty</string>
    <string name="alerterroridbook">ID book already exists</string>
    <string name="alerterrortheloaiid">ID Theloai already exists</string>
    <string name="emptyidbook">ID Book cannot be empty</string>
    <string name="emptynamebook">Name cannot be empty</string>
    <string name="emptyauthorbook">Author cannot be empty</string>
    <string name="emptyproducerbook">Producer cannot be empty</string>
    <string name="emptypricebook">Price cannot be empty</string>
    <string name="emptyquantitybook">Quantity cannot be empty</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="emptyidhoadon">ID cannot be empty</string>
    <string name="emptydatehoadon">Date cannot bet empty</string>
    <string name="alertadderrhoadon">ID HoaDon already exists</string>
    <string name="emptyaddidhd">ID Hoa Don must not empty</string>
    <string name="emptyadddatehd">Date cannot be empty</string>
    <string name="error_idhd">ID already exists</string>
    <string name="alerterroridbooknotexists">ID does not exist</string>
    <string name="empty_confirmpassword">Confirm Password cannot be empty</string>
    <string name="errormonth">Month must be 1-12</string>
    <string name="empty_search_month">Month cannot be empty</string>
    <string name="morethan">This quantity must not more than Quantity of Book</string>
    <string name="leng"><![CDATA[Length must < 50]]></string>
    <string name="lengthname"><![CDATA[Name Length must < 20]]></string>
    <string name="lengthtl"><![CDATA[ID Length must < 5]]></string>
    <string name="lengthnametl">Length must be less than 30</string>
    <string name="lengthidsach">ID must be less than 5</string>
    <string name="posotion">Position must be less 100</string>
    <string name="des">Describe must be less 15</string>
    <string name="morethan99999">Quantiy must be less 99999</string>
    <string name="morethanfloat">Price must be less 9999999999999999.9</string>
    <string name="less7">ID must be less 7</string>
    <string name="data">Data in Systems is Empty</string>
</resources>
